--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Rap Names API</h1>
-    <p>Please use localhose:8000/api/rapper-name</p>
+    <p>I need to figure out the new URL</p>
 </body>
 </html>
